# grpc-translate

./: Cargo.toml  build.rs
proto/: translate.proto
src/: client.rs  main.rs
