
[package]
name = "language-api"
version = "0.1.0"
authors = ["acsandmann"]
edition = "2021"
default-run = "language-api"

[[bin]]
name = "language-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lingua = "1.6.2"
tonic = "0.11.0"
prost = "0.12.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"]}
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.11.0"